# distributed-file-system

./: .dockerignore  .gitignore  CONTRACT.md  Dockerfile.client  README.md  README_CLIENT.md  README_STORAGE.md  TASKS.md  client.py  client_logic.py  config.py  demo.sh  docker-compose.yml  exceptions.py  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  FAULT_TOLERANCE.md
naming_server/: Dockerfile  app.py  test_naming.py
storage_server/: Dockerfile  __init__.py  config.py  logging_config.py  main.py  storage.py
tests/: test_client.py  test_storage_server.py
