[project]
name = "distributed-file-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.8"
dependencies = [
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
