[project]
name = "distributed-file-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.8"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.0.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=0.25.0",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
